# Health-Insurance-Claims-Processing-System

./: .gitignore  ARCHITECTURE.md  CONTRACTS.md  DEMO_SCRIPT.md  DEPLOY_GUIDE.md  LIMITATIONS.md  PROJECT_OVERVIEW.md  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: adjudication.py  document_gate.py  extraction.py  fraud_detection.py  orchestrator.py
backend/app/api/: claims.py
backend/app/models/: database.py  schemas.py
backend/app/services/: llm_client.py  policy_loader.py  trace_logger.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_adjudication.py  test_document_gate.py  test_fraud_detection.py  test_orchestrator.py
eval/: EVAL_REPORT.md  run_eval.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AmountBreakdown.tsx  ClaimForm.tsx  DecisionBadge.tsx  DocumentErrorList.tsx  TraceTimeline.tsx
frontend/src/pages/: ClaimDetail.tsx  Dashboard.tsx  SubmitClaim.tsx
